chore: update requirements
